# fucking-around-and-finding-out

./: .gitignore
c/SCAn/: CMakeLists.txt
c/SCAn/src/: banner.txt  main.c  task_queue.c  task_queue.h
c/SCAn/src/cat/: CMakeLists.txt  cat.h
c/SCAn/src/constants/: CMakeLists.txt  constants.h
c/SCAn/src/logger/: CMakeLists.txt  logger.c  logger.h
c/SCAn/src/thread_pool/: CMakeLists.txt  steps.c  steps_i.h  steps_p.h  task_queue.c  task_queue.h  task_queue_public.h  thread_pool.c  thread_pool.h
c/calculator/: CMakeLists.txt  Makefile
c/calculator/src/: calc.c  main.c
c/calculator/src/expression/: CMakeLists.txt  calculate.c  calculate.h  expression.h  parse.c  parse.h  print.c  print.h  structs.c  structs.h  util.c  util.h  validate.c  validate.h
c/calculator/src/flags/: CMakeLists.txt  flags.c  flags.h
